add initial message

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		// start program when page is loaded
 		window.onload = function(){
 			// create canvas object
+			alert("Click anywhere!");
 			var canvas = document.createElement("canvas"),
 				width = canvas.width = window.innerWidth,
 				height = canvas.height = window.innerHeight;
